updated css to make containers span the full height of the screen. Still having an issue with the height being a little too tall and causing scroll bars.

--- a/css/notely.sidebar.css
+++ b/css/notely.sidebar.css
@@ -2,8 +2,11 @@
   width: 10%;
   height: 100%;
   border: 3px solid #000000;
-  overflow: auto;
   float: left;
+}
+
+.notely-sidebar {
+  height: inherit;
 }
 
 .fa-ul li:hover {
